style.css
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    background-color: #071021;
    color: #f1f5f9;
}
html, h1 {
    font-family: "Raleway", Arial, sans-serif;
}
.page {
    max-width: 1200px;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: auto;
}
.block {
    width: 620px;
    max-width: 100%;
    align-self: center;
}
.separator {
   font-size: 40px; 
}
.pink {
    font-weight: bold;
    color: #EECECF;
}
.background-pink:hover {
    background-color: #EECECF !important;
}
.contact {
    font-weight: normal;
    text-decoration: underline;
}
a {
    text-decoration: none;
}
.portfolio a, a:hover span {
    text-decoration: underline;
    color: #EECECF;
}
.portfolio img {
  max-width: 100%;
  width: 600px;
  height: auto;
  display: block;
  margin: 0 auto;
}
.portfolio figure {
    margin: 20px 0px;
}
video {
    max-width: 100%;
}
.zoomable {
  max-width: 100%;
  transition: 0.3s ease;
}

/* Zoom on images on click */
#lightbox {
  position: fixed;
  top: 0; left: 0;
  width: 100%; height: 100%;
  background: rgba(0, 0, 0, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

#lightbox img {
  max-width: 90%;
  max-height: 90%;
  box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
}

.hidden {
  display: none !important;
}

@media only screen and (max-width: 600px) {
    h1 {
        font-size: 30px;
    }
    .nav {
        font-size: 13px;
    }
}

